Works/CS445 Compiler Design/hw6 Memory Addressing/Given Files and Test Files and Outputs/parser.output
Terminals unused in grammar

   CHSIGN
   SIZEOF


State 1 conflicts: 2 shift/reduce
State 20 conflicts: 1 shift/reduce
State 67 conflicts: 2 reduce/reduce
State 161 conflicts: 2 shift/reduce
State 169 conflicts: 1 shift/reduce
State 215 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declList

    2 declList: declList decl
    3         | decl

    4 decl: varDecl
    5     | funDecl
    6     | error

    7 varDecl: typeSpec varDeclList ';'
    8        | error varDeclList ';'
    9        | typeSpec error ';'

   10 scopedVarDecl: STATIC typeSpec varDeclList ';'
   11              | typeSpec varDeclList ';'

   12 varDeclList: varDeclList ',' varDeclInit
   13            | varDeclList ',' error
   14            | error
   15            | varDeclInit

   16 varDeclInit: varDeclId
   17            | varDeclId ':' simpleExp
   18            | error ':' simpleExp

   19 varDeclId: ID
   20          | ID '[' NUMCONST ']'
   21          | ID '[' error
   22          | error ']'

   23 typeSpec: INT
   24         | BOOL
   25         | CHAR

   26 funDecl: typeSpec ID '(' parms ')' stmt
   27        | typeSpec error
   28        | typeSpec ID '(' error
   29        | ID '(' parms ')' stmt
   30        | ID '(' error
   31        | ID '(' parms ')' error

   32 parms: parmList
   33      | %empty

   34 parmList: parmList ';' parmTypeList
   35         | parmList ';' error
   36         | error
   37         | parmTypeList

   38 parmTypeList: typeSpec parmIdList
   39             | typeSpec error

   40 parmIdList: parmIdList ',' parmId
   41           | parmIdList ',' error
   42           | error
   43           | parmId

   44 parmId: ID
   45       | ID '[' ']'

   46 stmt: matched
   47     | unmatched

   48 matched: IF simpleExp THEN matched ELSE matched
   49        | IF error
   50        | IF error ELSE matched
   51        | IF error THEN matched ELSE matched
   52        | WHILE simpleExp DO matched
   53        | WHILE error DO matched
   54        | WHILE error
   55        | FOR ID '=' iterRange DO matched
   56        | FOR ID '=' error DO matched
   57        | FOR error
   58        | otherStmts

   59 unmatched: IF simpleExp THEN matched
   60          | IF simpleExp THEN unmatched
   61          | IF simpleExp THEN matched ELSE unmatched
   62          | IF error THEN stmt
   63          | IF error THEN matched ELSE unmatched
   64          | WHILE simpleExp DO unmatched
   65          | FOR ID '=' iterRange DO unmatched

   66 otherStmts: expStmt
   67           | compoundStmt
   68           | returnStmt
   69           | breakStmt

   70 expStmt: exp ';'
   71        | error ';'
   72        | ';'

   73 compoundStmt: '{' localDecls stmtList '}'

   74 localDecls: localDecls scopedVarDecl
   75           | %empty

   76 stmtList: stmtList stmt
   77         | %empty

   78 iterRange: simpleExp TO simpleExp
   79          | simpleExp TO simpleExp BY simpleExp
   80          | simpleExp TO error
   81          | error BY error
   82          | simpleExp TO simpleExp BY error

   83 returnStmt: RETURN ';'
   84           | RETURN exp ';'
   85           | RETURN error ';'

   86 breakStmt: BREAK ';'

   87 exp: mutable assignop exp
   88    | error assignop exp
   89    | mutable assignop error
   90    | mutable INC
   91    | mutable DEC
   92    | error INC
   93    | error DEC
   94    | simpleExp

   95 assignop: '='
   96         | ADDASS
   97         | SUBASS
   98         | MULASS
   99         | DIVASS

  100 simpleExp: simpleExp OR andExp
  101          | simpleExp OR error
  102          | andExp

  103 andExp: andExp AND unaryRelExp
  104       | andExp AND error
  105       | unaryRelExp

  106 unaryRelExp: NOT unaryRelExp
  107            | NOT error
  108            | relExp

  109 relExp: minmaxExp relop minmaxExp
  110       | minmaxExp relop error
  111       | minmaxExp

  112 relop: LEQ
  113      | '<'
  114      | '>'
  115      | GEQ
  116      | EQ
  117      | NEQ

  118 minmaxExp: minmaxExp minmaxop sumExp
  119          | sumExp

  120 minmaxop: MAX
  121         | MIN

  122 sumExp: sumExp sumop mulExp
  123       | sumExp sumop error
  124       | mulExp

  125 sumop: '+'
  126      | '-'

  127 mulExp: mulExp mulop unaryExp
  128       | mulExp mulop error
  129       | unaryExp

  130 mulop: '*'
  131      | '/'
  132      | '%'

  133 unaryExp: unaryop unaryExp
  134         | unaryop error
  135         | factor

  136 unaryop: '-'
  137        | '*'
  138        | '?'

  139 factor: immutable
  140       | mutable

  141 mutable: ID
  142        | ID '[' exp ']'

  143 immutable: '(' exp ')'
  144          | '(' error
  145          | call
  146          | constant

  147 call: ID '(' args ')'
  148     | error '('

  149 args: argList
  150     | %empty

  151 argList: argList ',' exp
  152        | argList ',' error
  153        | exp

  154 constant: NUMCONST
  155         | CHARCONST
  156         | STRINGCONST
  157         | BOOLCONST


Terminals, with rules where they appear

$end (0) 0
'%' (37) 132
'(' (40) 26 28 29 30 31 143 144 147 148
')' (41) 26 29 31 143 147
'*' (42) 130 137
'+' (43) 125
',' (44) 12 13 40 41 151 152
'-' (45) 126 136
'/' (47) 131
':' (58) 17 18
';' (59) 7 8 9 10 11 34 35 70 71 72 83 84 85 86
'<' (60) 113
'=' (61) 55 56 65 95
'>' (62) 114
'?' (63) 138
'[' (91) 20 21 45 142
']' (93) 20 22 45 142
'{' (123) 73
'}' (125) 73
error (256) 6 8 9 13 14 18 21 22 27 28 30 31 35 36 39 41 42 49 50 51
    53 54 56 57 62 63 71 80 81 82 85 88 89 92 93 101 104 107 110 123
    128 134 144 148 152
ADDASS (258) 96
ID (259) 19 20 21 26 28 29 30 31 44 45 55 56 65 141 142 147
INT (260) 23
NUMCONST (261) 20 154
IF (262) 48 49 50 51 59 60 61 62 63
EQ (263) 116
RETURN (264) 83 84 85
STRINGCONST (265) 156
THEN (266) 48 51 59 60 61 62 63
ELSE (267) 48 50 51 61 63
DEC (268) 91 93
CHARCONST (269) 155
BOOL (270) 24
CHAR (271) 25
STATIC (272) 10
AND (273) 103 104
OR (274) 100 101
NOT (275) 106 107
BOOLCONST (276) 157
FOR (277) 55 56 57 65
TO (278) 78 79 80 82
BY (279) 79 81 82
DO (280) 52 53 55 56 64 65
BREAK (281) 86
WHILE (282) 52 53 54 64
INC (283) 90 92
MIN (284) 121
MAX (285) 120
GEQ (286) 115
LEQ (287) 112
NEQ (288) 117
SUBASS (289) 97
MULASS (290) 98
DIVASS (291) 99
CHSIGN (292)
SIZEOF (293)


Nonterminals, with rules where they appear

$accept (57)
    on left: 0
program (58)
    on left: 1, on right: 0
declList (59)
    on left: 2 3, on right: 1 2
decl (60)
    on left: 4 5 6, on right: 2 3
varDecl (61)
    on left: 7 8 9, on right: 4
scopedVarDecl (62)
    on left: 10 11, on right: 74
varDeclList (63)
    on left: 12 13 14 15, on right: 7 8 10 11 12 13
varDeclInit (64)
    on left: 16 17 18, on right: 12 15
varDeclId (65)
    on left: 19 20 21 22, on right: 16 17
typeSpec (66)
    on left: 23 24 25, on right: 7 9 10 11 26 27 28 38 39
funDecl (67)
    on left: 26 27 28 29 30 31, on right: 5
parms (68)
    on left: 32 33, on right: 26 29 31
parmList (69)
    on left: 34 35 36 37, on right: 32 34 35
parmTypeList (70)
    on left: 38 39, on right: 34 37
parmIdList (71)
    on left: 40 41 42 43, on right: 38 40 41
parmId (72)
    on left: 44 45, on right: 40 43
stmt (73)
    on left: 46 47, on right: 26 29 62 76
matched (74)
    on left: 48 49 50 51 52 53 54 55 56 57 58, on right: 46 48 50 51
    52 53 55 56 59 61 63
unmatched (75)
    on left: 59 60 61 62 63 64 65, on right: 47 60 61 63 64 65
otherStmts (76)
    on left: 66 67 68 69, on right: 58
expStmt (77)
    on left: 70 71 72, on right: 66
compoundStmt (78)
    on left: 73, on right: 67
localDecls (79)
    on left: 74 75, on right: 73 74
stmtList (80)
    on left: 76 77, on right: 73 76
iterRange (81)
    on left: 78 79 80 81 82, on right: 55 65
returnStmt (82)
    on left: 83 84 85, on right: 68
breakStmt (83)
    on left: 86, on right: 69
exp (84)
    on left: 87 88 89 90 91 92 93 94, on right: 70 84 87 88 142 143
    151 153
assignop (85)
    on left: 95 96 97 98 99, on right: 87 88 89
simpleExp (86)
    on left: 100 101 102, on right: 17 18 48 52 59 60 61 64 78 79 80
    82 94 100 101
andExp (87)
    on left: 103 104 105, on right: 100 102 103 104
unaryRelExp (88)
    on left: 106 107 108, on right: 103 105 106
relExp (89)
    on left: 109 110 111, on right: 108
relop (90)
    on left: 112 113 114 115 116 117, on right: 109 110
minmaxExp (91)
    on left: 118 119, on right: 109 110 111 118
minmaxop (92)
    on left: 120 121, on right: 118
sumExp (93)
    on left: 122 123 124, on right: 118 119 122 123
sumop (94)
    on left: 125 126, on right: 122 123
mulExp (95)
    on left: 127 128 129, on right: 122 124 127 128
mulop (96)
    on left: 130 131 132, on right: 127 128
unaryExp (97)
    on left: 133 134 135, on right: 127 129 133
unaryop (98)
    on left: 136 137 138, on right: 133 134
factor (99)
    on left: 139 140, on right: 135
mutable (100)
    on left: 141 142, on right: 87 89 90 91 140
immutable (101)
    on left: 143 144 145 146, on right: 139
call (102)
    on left: 147 148, on right: 145
args (103)
    on left: 149 150, on right: 147
argList (104)
    on left: 151 152 153, on right: 149 151 152
constant (105)
    on left: 154 155 156 157, on right: 146


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    ID     shift, and go to state 2
    INT    shift, and go to state 3
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    program   go to state 6
    declList  go to state 7
    decl      go to state 8
    varDecl   go to state 9
    typeSpec  go to state 10
    funDecl   go to state 11


State 1

    6 decl: error .
    8 varDecl: error . varDeclList ';'

    error  shift, and go to state 12
    ID     shift, and go to state 13

    $end   reduce using rule 6 (decl)
    error  [reduce using rule 6 (decl)]
    ID     [reduce using rule 6 (decl)]
    INT    reduce using rule 6 (decl)
    BOOL   reduce using rule 6 (decl)
    CHAR   reduce using rule 6 (decl)

    varDeclList  go to state 14
    varDeclInit  go to state 15
    varDeclId    go to state 16


State 2

   29 funDecl: ID . '(' parms ')' stmt
   30        | ID . '(' error
   31        | ID . '(' parms ')' error

    '('  shift, and go to state 17


State 3

   23 typeSpec: INT .

    $default  reduce using rule 23 (typeSpec)


State 4

   24 typeSpec: BOOL .

    $default  reduce using rule 24 (typeSpec)


State 5

   25 typeSpec: CHAR .

    $default  reduce using rule 25 (typeSpec)


State 6

    0 $accept: program . $end

    $end  shift, and go to state 18


State 7

    1 program: declList .
    2 declList: declList . decl

    error  shift, and go to state 1
    ID     shift, and go to state 2
    INT    shift, and go to state 3
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    $end  reduce using rule 1 (program)

    decl      go to state 19
    varDecl   go to state 9
    typeSpec  go to state 10
    funDecl   go to state 11


State 8

    3 declList: decl .

    $default  reduce using rule 3 (declList)


State 9

    4 decl: varDecl .

    $default  reduce using rule 4 (decl)


State 10

    7 varDecl: typeSpec . varDeclList ';'
    9        | typeSpec . error ';'
   26 funDecl: typeSpec . ID '(' parms ')' stmt
   27        | typeSpec . error
   28        | typeSpec . ID '(' error

    error  shift, and go to state 20
    ID     shift, and go to state 21

    varDeclList  go to state 22
    varDeclInit  go to state 15
    varDeclId    go to state 16


State 11

    5 decl: funDecl .

    $default  reduce using rule 5 (decl)


State 12

   14 varDeclList: error .
   18 varDeclInit: error . ':' simpleExp
   22 varDeclId: error . ']'

    ']'  shift, and go to state 23
    ':'  shift, and go to state 24

    $default  reduce using rule 14 (varDeclList)


State 13

   19 varDeclId: ID .
   20          | ID . '[' NUMCONST ']'
   21          | ID . '[' error

    '['  shift, and go to state 25

    $default  reduce using rule 19 (varDeclId)


State 14

    8 varDecl: error varDeclList . ';'
   12 varDeclList: varDeclList . ',' varDeclInit
   13            | varDeclList . ',' error

    ';'  shift, and go to state 26
    ','  shift, and go to state 27


State 15

   15 varDeclList: varDeclInit .

    $default  reduce using rule 15 (varDeclList)


State 16

   16 varDeclInit: varDeclId .
   17            | varDeclId . ':' simpleExp

    ':'  shift, and go to state 28

    $default  reduce using rule 16 (varDeclInit)


State 17

   29 funDecl: ID '(' . parms ')' stmt
   30        | ID '(' . error
   31        | ID '(' . parms ')' error

    error  shift, and go to state 29
    INT    shift, and go to state 3
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    ')'  reduce using rule 33 (parms)

    typeSpec      go to state 30
    parms         go to state 31
    parmList      go to state 32
    parmTypeList  go to state 33


State 18

    0 $accept: program $end .

    $default  accept


State 19

    2 declList: declList decl .

    $default  reduce using rule 2 (declList)


State 20

    9 varDecl: typeSpec error . ';'
   14 varDeclList: error .
   18 varDeclInit: error . ':' simpleExp
   22 varDeclId: error . ']'
   27 funDecl: typeSpec error .

    ']'  shift, and go to state 23
    ':'  shift, and go to state 24
    ';'  shift, and go to state 34

    ';'       [reduce using rule 14 (varDeclList)]
    ','       reduce using rule 14 (varDeclList)
    $default  reduce using rule 27 (funDecl)


State 21

   19 varDeclId: ID .
   20          | ID . '[' NUMCONST ']'
   21          | ID . '[' error
   26 funDecl: typeSpec ID . '(' parms ')' stmt
   28        | typeSpec ID . '(' error

    '('  shift, and go to state 35
    '['  shift, and go to state 25

    $default  reduce using rule 19 (varDeclId)


State 22

    7 varDecl: typeSpec varDeclList . ';'
   12 varDeclList: varDeclList . ',' varDeclInit
   13            | varDeclList . ',' error

    ';'  shift, and go to state 36
    ','  shift, and go to state 27


State 23

   22 varDeclId: error ']' .

    $default  reduce using rule 22 (varDeclId)


State 24

   18 varDeclInit: error ':' . simpleExp

    error        shift, and go to state 37
    '*'          shift, and go to state 38
    '('          shift, and go to state 39
    '-'          shift, and go to state 40
    '?'          shift, and go to state 41
    ID           shift, and go to state 42
    NUMCONST     shift, and go to state 43
    STRINGCONST  shift, and go to state 44
    CHARCONST    shift, and go to state 45
    NOT          shift, and go to state 46
    BOOLCONST    shift, and go to state 47

    simpleExp    go to state 48
    andExp       go to state 49
    unaryRelExp  go to state 50
    relExp       go to state 51
    minmaxExp    go to state 52
    sumExp       go to state 53
    mulExp       go to state 54
    unaryExp     go to state 55
    unaryop      go to state 56
    factor       go to state 57
    mutable      go to state 58
    immutable    go to state 59
    call         go to state 60
    constant     go to state 61


State 25

   20 varDeclId: ID '[' . NUMCONST ']'
   21          | ID '[' . error

    error     shift, and go to state 62
    NUMCONST  shift, and go to state 63


State 26

    8 varDecl: error varDeclList ';' .

    $default  reduce using rule 8 (varDecl)


State 27

   12 varDeclList: varDeclList ',' . varDeclInit
   13            | varDeclList ',' . error

    error  shift, and go to state 64
    ID     shift, and go to state 13

    varDeclInit  go to state 65
    varDeclId    go to state 16


State 28

   17 varDeclInit: varDeclId ':' . simpleExp

    error        shift, and go to state 37
    '*'          shift, and go to state 38
    '('          shift, and go to state 39
    '-'          shift, and go to state 40
    '?'          shift, and go to state 41
    ID           shift, and go to state 42
    NUMCONST     shift, and go to state 43
    STRINGCONST  shift, and go to state 44
    CHARCONST    shift, and go to state 45
    NOT          shift, and go to state 46
    BOOLCONST    shift, and go to state 47

    simpleExp    go to state 66
    andExp       go to state 49
    unaryRelExp  go to state 50
    relExp       go to state 51
    minmaxExp    go to state 52
    sumExp       go to state 53
    mulExp       go to state 54
    unaryExp     go to state 55
    unaryop      go to state 56
    factor       go to state 57
    mutable      go to state 58
    immutable    go to state 59
    call         go to state 60
    constant     go to state 61


State 29

   30 funDecl: ID '(' error .
   36 parmList: error .

    ')'       reduce using rule 36 (parmList)
    ';'       reduce using rule 36 (parmList)
    $default  reduce using rule 30 (funDecl)


State 30

   38 parmTypeList: typeSpec . parmIdList
   39             | typeSpec . error

    error  shift, and go to state 67
    ID     shift, and go to state 68

    parmIdList  go to state 69
    parmId      go to state 70


State 31

   29 funDecl: ID '(' parms . ')' stmt
   31        | ID '(' parms . ')' error

    ')'  shift, and go to state 71


State 32

   32 parms: parmList .
   34 parmList: parmList . ';' parmTypeList
   35         | parmList . ';' error

    ';'  shift, and go to state 72

    $default  reduce using rule 32 (parms)


State 33

   37 parmList: parmTypeList .

    $default  reduce using rule 37 (parmList)


State 34

    9 varDecl: typeSpec error ';' .

    $default  reduce using rule 9 (varDecl)


State 35

   26 funDecl: typeSpec ID '(' . parms ')' stmt
   28        | typeSpec ID '(' . error

    error  shift, and go to state 73
    INT    shift, and go to state 3
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    ')'  reduce using rule 33 (parms)

    typeSpec      go to state 30
    parms         go to state 74
    parmList      go to state 32
    parmTypeList  go to state 33


State 36

    7 varDecl: typeSpec varDeclList ';' .

    $default  reduce using rule 7 (varDecl)


State 37

  148 call: error . '('

    '('  shift, and go to state 75


State 38

  137 unaryop: '*' .

    $default  reduce using rule 137 (unaryop)


State 39

  143 immutable: '(' . exp ')'
  144          | '(' . error

    error        shift, and go to state 76
    '*'          shift, and go to state 38
    '('          shift, and go to state 39
    '-'          shift, and go to state 40
    '?'          shift, and go to state 41
    ID           shift, and go to state 42
    NUMCONST     shift, and go to state 43
    STRINGCONST  shift, and go to state 44
    CHARCONST    shift, and go to state 45
    NOT          shift, and go to state 46
    BOOLCONST    shift, and go to state 47

    exp          go to state 77
    simpleExp    go to state 78
    andExp       go to state 49
    unaryRelExp  go to state 50
    relExp       go to state 51
    minmaxExp    go to state 52
    sumExp       go to state 53
    mulExp       go to state 54
    unaryExp     go to state 55
    unaryop      go to state 56
    factor       go to state 57
    mutable      go to state 79
    immutable    go to state 59
    call         go to state 60
    constant     go to state 61


State 40

  136 unaryop: '-' .

    $default  reduce using rule 136 (unaryop)


State 41

  138 unaryop: '?' .

    $default  reduce using rule 138 (unaryop)


State 42

  141 mutable: ID .
  142        | ID . '[' exp ']'
  147 call: ID . '(' args ')'

    '('  shift, and go to state 80
    '['  shift, and go to state 81

    $default  reduce using rule 141 (mutable)


State 43

  154 constant: NUMCONST .

    $default  reduce using rule 154 (constant)


State 44

  156 constant: STRINGCONST .

    $default  reduce using rule 156 (constant)


State 45

  155 constant: CHARCONST .

    $default  reduce using rule 155 (constant)


State 46

  106 unaryRelExp: NOT . unaryRelExp
  107            | NOT . error

    error        shift, and go to state 82
    '*'          shift, and go to state 38
    '('          shift, and go to state 39
    '-'          shift, and go to state 40
    '?'          shift, and go to state 41
    ID           shift, and go to state 42
    NUMCONST     shift, and go to state 43
    STRINGCONST  shift, and go to state 44
    CHARCONST    shift, and go to state 45
    NOT          shift, and go to state 46
    BOOLCONST    shift, and go to state 47

    unaryRelExp  go to state 83
    relExp       go to state 51
    minmaxExp    go to state 52
    sumExp       go to state 53
    mulExp       go to state 54
    unaryExp     go to state 55
    unaryop      go to state 56
    factor       go to state 57
    mutable      go to state 58
    immutable    go to state 59
    call         go to state 60
    constant     go to state 61


State 47

  157 constant: BOOLCONST .

    $default  reduce using rule 157 (constant)


State 48

   18 varDeclInit: error ':' simpleExp .
  100 simpleExp: simpleExp . OR andExp
  101          | simpleExp . OR error

    OR  shift, and go to state 84

    $default  reduce using rule 18 (varDeclInit)


State 49

  102 simpleExp: andExp .
  103 andExp: andExp . AND unaryRelExp
  104       | andExp . AND error

    AND  shift, and go to state 85

    $default  reduce using rule 102 (simpleExp)


State 50

  105 andExp: unaryRelExp .

    $default  reduce using rule 105 (andExp)


State 51

  108 unaryRelExp: relExp .

    $default  reduce using rule 108 (unaryRelExp)


State 52

  109 relExp: minmaxExp . relop minmaxExp
  110       | minmaxExp . relop error
  111       | minmaxExp .
  118 minmaxExp: minmaxExp . minmaxop sumExp

    '<'  shift, and go to state 86
    '>'  shift, and go to state 87
    EQ   shift, and go to state 88
    MIN  shift, and go to state 89
    MAX  shift, and go to state 90
    GEQ  shift, and go to state 91
    LEQ  shift, and go to state 92
    NEQ  shift, and go to state 93

    $default  reduce using rule 111 (relExp)

    relop     go to state 94
    minmaxop  go to state 95


State 53

  119 minmaxExp: sumExp .
  122 sumExp: sumExp . sumop mulExp
  123       | sumExp . sumop error

    '-'  shift, and go to state 96
    '+'  shift, and go to state 97

    $default  reduce using rule 119 (minmaxExp)

    sumop  go to state 98


State 54

  124 sumExp: mulExp .
  127 mulExp: mulExp . mulop unaryExp
  128       | mulExp . mulop error

    '%'  shift, and go to state 99
    '*'  shift, and go to state 100
    '/'  shift, and go to state 101

    $default  reduce using rule 124 (sumExp)

    mulop  go to state 102


State 55

  129 mulExp: unaryExp .

    $default  reduce using rule 129 (mulExp)


State 56

  133 unaryExp: unaryop . unaryExp
  134         | unaryop . error

    error        shift, and go to state 103
    '*'          shift, and go to state 38
    '('          shift, and go to state 39
    '-'          shift, and go to state 40
    '?'          shift, and go to state 41
    ID           shift, and go to state 42
    NUMCONST     shift, and go to state 43
    STRINGCONST  shift, and go to state 44
    CHARCONST    shift, and go to state 45
    BOOLCONST    shift, and go to state 47

    unaryExp   go to state 104
    unaryop    go to state 56
    factor     go to state 57
    mutable    go to state 58
    immutable  go to state 59
    call       go to state 60
    constant   go to state 61


State 57

  135 unaryExp: factor .

    $default  reduce using rule 135 (unaryExp)


State 58

  140 factor: mutable .

    $default  reduce using rule 140 (factor)


State 59

  139 factor: immutable .

    $default  reduce using rule 139 (factor)


State 60

  145 immutable: call .

    $default  reduce using rule 145 (immutable)


State 61

  146 immutable: constant .

    $default  reduce using rule 146 (immutable)


State 62

   21 varDeclId: ID '[' error .

    $default  reduce using rule 21 (varDeclId)


State 63

   20 varDeclId: ID '[' NUMCONST . ']'

    ']'  shift, and go to state 105


State 64

   13 varDeclList: varDeclList ',' error .
   18 varDeclInit: error . ':' simpleExp
   22 varDeclId: error . ']'

    ']'  shift, and go to state 23
    ':'  shift, and go to state 24

    $default  reduce using rule 13 (varDeclList)


State 65

   12 varDeclList: varDeclList ',' varDeclInit .

    $default  reduce using rule 12 (varDeclList)


State 66

   17 varDeclInit: varDeclId ':' simpleExp .
  100 simpleExp: simpleExp . OR andExp
  101          | simpleExp . OR error

    OR  shift, and go to state 84

    $default  reduce using rule 17 (varDeclInit)


State 67

   39 parmTypeList: typeSpec error .
   42 parmIdList: error .

    ')'       reduce using rule 39 (parmTypeList)
    ')'       [reduce using rule 42 (parmIdList)]
    ';'       reduce using rule 39 (parmTypeList)
    ';'       [reduce using rule 42 (parmIdList)]
    ','       reduce using rule 42 (parmIdList)
    $default  reduce using rule 39 (parmTypeList)


State 68

   44 parmId: ID .
   45       | ID . '[' ']'

    '['  shift, and go to state 106

    $default  reduce using rule 44 (parmId)


State 69

   38 parmTypeList: typeSpec parmIdList .
   40 parmIdList: parmIdList . ',' parmId
   41           | parmIdList . ',' error

    ','  shift, and go to state 107

    $default  reduce using rule 38 (parmTypeList)


State 70

   43 parmIdList: parmId .

    $default  reduce using rule 43 (parmIdList)


State 71

   29 funDecl: ID '(' parms ')' . stmt
   31        | ID '(' parms ')' . error

    error        shift, and go to state 108
    '*'          shift, and go to state 38
    '('          shift, and go to state 39
    '-'          shift, and go to state 40
    '{'          shift, and go to state 109
    ';'          shift, and go to state 110
    '?'          shift, and go to state 41
    ID           shift, and go to state 42
    NUMCONST     shift, and go to state 43
    IF           shift, and go to state 111
    RETURN       shift, and go to state 112
    STRINGCONST  shift, and go to state 44
    CHARCONST    shift, and go to state 45
    NOT          shift, and go to state 46
    BOOLCONST    shift, and go to state 47
    FOR          shift, and go to state 113
    BREAK        shift, and go to state 114
    WHILE        shift, and go to state 115

    stmt          go to state 116
    matched       go to state 117
    unmatched     go to state 118
    otherStmts    go to state 119
    expStmt       go to state 120
    compoundStmt  go to state 121
    returnStmt    go to state 122
    breakStmt     go to state 123
    exp           go to state 124
    simpleExp     go to state 78
    andExp        go to state 49
    unaryRelExp   go to state 50
    relExp        go to state 51
    minmaxExp     go to state 52
    sumExp        go to state 53
    mulExp        go to state 54
    unaryExp      go to state 55
    unaryop       go to state 56
    factor        go to state 57
    mutable       go to state 79
    immutable     go to state 59
    call          go to state 60
    constant      go to state 61


State 72

   34 parmList: parmList ';' . parmTypeList
   35         | parmList ';' . error

    error  shift, and go to state 125
    INT    shift, and go to state 3
    BOOL   shift, and go to state 4
    CHAR   shift, and go to state 5

    typeSpec      go to state 30
    parmTypeList  go to state 126


State 73

   28 funDecl: typeSpec ID '(' error .
   36 parmList: error .

    ')'       reduce using rule 36 (parmList)
    ';'       reduce using rule 36 (parmList)
    $default  reduce using rule 28 (funDecl)


State 74

   26 funDecl: typeSpec ID '(' parms . ')' stmt

    ')'  shift, and go to state 127


State 75

  148 call: error '(' .

    $default  reduce using rule 148 (call)


State 76

   88 exp: error . assignop exp
   92    | error . INC
   93    | error . DEC
  144 immutable: '(' error .
  148 call: error . '('

    '('     shift, and go to state 75
    '='     shift, and go to state 128
    ADDASS  shift, and go to state 129
    DEC     shift, and go to state 130
    INC     shift, and go to state 131
    SUBASS  shift, and go to state 132
    MULASS  shift, and go to state 133
    DIVASS  shift, and go to state 134

    $default  reduce using rule 144 (immutable)

    assignop  go to state 135


State 77

  143 immutable: '(' exp . ')'

    ')'  shift, and go to state 136


State 78

   94 exp: simpleExp .
  100 simpleExp: simpleExp . OR andExp
  101          | simpleExp . OR error

    OR  shift, and go to state 84

    $default  reduce using rule 94 (exp)


State 79

   87 exp: mutable . assignop exp
   89    | mutable . assignop error
   90    | mutable . INC
   91    | mutable . DEC
  140 factor: mutable .

    '='     shift, and go to state 128
    ADDASS  shift, and go to state 129
    DEC     shift, and go to state 137
    INC     shift, and go to state 138
    SUBASS  shift, and go to state 132
    MULASS  shift, and go to state 133
    DIVASS  shift, and go to state 134

    $default  reduce using rule 140 (factor)

    assignop  go to state 139


State 80

  147 call: ID '(' . args ')'

    error        shift, and go to state 140
    '*'          shift, and go to state 38
    '('          shift, and go to state 39
    '-'          shift, and go to state 40
    '?'          shift, and go to state 41
    ID           shift, and go to state 42
    NUMCONST     shift, and go to state 43
    STRINGCONST  shift, and go to state 44
    CHARCONST    shift, and go to state 45
    NOT          shift, and go to state 46
    BOOLCONST    shift, and go to state 47

    ')'  reduce using rule 150 (args)

    exp          go to state 141
    simpleExp    go to state 78
    andExp       go to state 49
    unaryRelExp  go to state 50
    relExp       go to state 51
    minmaxExp    go to state 52
    sumExp       go to state 53
    mulExp       go to state 54
    unaryExp     go to state 55
    unaryop      go to state 56
    factor       go to state 57
    mutable      go to state 79
    immutable    go to state 59
    call         go to state 60
    args         go to state 142
    argList      go to state 143
    constant     go to state 61


State 81

  142 mutable: ID '[' . exp ']'

    error        shift, and go to state 140
    '*'          shift, and go to state 38
    '('          shift, and go to state 39
    '-'          shift, and go to state 40
    '?'          shift, and go to state 41
    ID           shift, and go to state 42
    NUMCONST     shift, and go to state 43
    STRINGCONST  shift, and go to state 44
    CHARCONST    shift, and go to state 45
    NOT          shift, and go to state 46
    BOOLCONST    shift, and go to state 47

    exp          go to state 144
    simpleExp    go to state 78
    andExp       go to state 49
    unaryRelExp  go to state 50
    relExp       go to state 51
    minmaxExp    go to state 52
    sumExp       go to state 53
    mulExp       go to state 54
    unaryExp     go to state 55
    unaryop      go to state 56
    factor       go to state 57
    mutable      go to state 79
    immutable    go to state 59
    call         go to state 60
    constant     go to state 61


State 82

  107 unaryRelExp: NOT error .
  148 call: error . '('

    '('  shift, and go to state 75

    $default  reduce using rule 107 (unaryRelExp)


State 83

  106 unaryRelExp: NOT unaryRelExp .

    $default  reduce using rule 106 (unaryRelExp)


State 84

  100 simpleExp: simpleExp OR . andExp
  101          | simpleExp OR . error

    error        shift, and go to state 145
    '*'          shift, and go to state 38
    '('          shift, and go to state 39
    '-'          shift, and go to state 40
    '?'          shift, and go to state 41
    ID           shift, and go to state 42
    NUMCONST     shift, and go to state 43
    STRINGCONST  shift, and go to state 44
    CHARCONST    shift, and go to state 45
    NOT          shift, and go to state 46
    BOOLCONST    shift, and go to state 47

    andExp       go to state 146
    unaryRelExp  go to state 50
    relExp       go to state 51
    minmaxExp    go to state 52
    sumExp       go to state 53
    mulExp       go to state 54
    unaryExp     go to state 55
    unaryop      go to state 56
    factor       go to state 57
    mutable      go to state 58
    immutable    go to state 59
    call         go to state 60
    constant     go to state 61


State 85

  103 andExp: andExp AND . unaryRelExp
  104       | andExp AND . error

    error        shift, and go to state 147
    '*'          shift, and go to state 38
    '('          shift, and go to state 39
    '-'          shift, and go to state 40
    '?'          shift, and go to state 41
    ID           shift, and go to state 42
    NUMCONST     shift, and go to state 43
    STRINGCONST  shift, and go to state 44
    CHARCONST    shift, and go to state 45
    NOT          shift, and go to state 46
    BOOLCONST    shift, and go to state 47

    unaryRelExp  go to state 148
    relExp       go to state 51
    minmaxExp    go to state 52
    sumExp       go to state 53
    mulExp       go to state 54
    unaryExp     go to state 55
    unaryop      go to state 56
    factor       go to state 57
    mutable      go to state 58
    immutable    go to state 59
    call         go to state 60
    constant     go to state 61


State 86

  113 relop: '<' .

    $default  reduce using rule 113 (relop)


State 87

  114 relop: '>' .

    $default  reduce using rule 114 (relop)


State 88

  116 relop: EQ .

    $default  reduce using rule 116 (relop)


State 89

  121 minmaxop: MIN .

    $default  reduce using rule 121 (minmaxop)


State 90

  120 minmaxop: MAX .

    $default  reduce using rule 120 (minmaxop)


State 91

  115 relop: GEQ .

    $default  reduce using rule 115 (relop)


State 92

  112 relop: LEQ .

    $default  reduce using rule 112 (relop)


State 93

  117 relop: NEQ .

    $default  reduce using rule 117 (relop)


State 94

  109 relExp: minmaxExp relop . minmaxExp
  110       | minmaxExp relop . error

    error        shift, and go to state 149
    '*'          shift, and go to state 38
    '('          shift, and go to state 39
    '-'          shift, and go to state 40
    '?'          shift, and go to state 41
    ID           shift, and go to state 42
    NUMCONST     shift, and go to state 43
    STRINGCONST  shift, and go to state 44
    CHARCONST    shift, and go to state 45
    BOOLCONST    shift, and go to state 47

    minmaxExp  go to state 150
    sumExp     go to state 53
    mulExp     go to state 54
    unaryExp   go to state 55
    unaryop    go to state 56
    factor     go to state 57
    mutable    go to state 58
    immutable  go to state 59
    call       go to state 60
    constant   go to state 61


State 95

  118 minmaxExp: minmaxExp minmaxop . sumExp
